--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,13 @@ body{
 .container{
     max-width: 1280px;
 }
-#breadcrumbs a{
+.breadcrumbs{
+    margin-bottom: 20px;
+}
+.breadcrumbs a{
     color: black;
 }
-#breadcrumbs a:hover{
+.breadcrumbs a:hover{
     color: rgba(var(--f52,142,142,142),1);
 }
 a:hover{
@@ -126,7 +129,7 @@ header .navigation_link {
     border-top: 1px solid rgba(var(--b38,219,219,219),1);
 }
 .main-menu-content{
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 .main-menu-content .nav-menu ul{
     display: flex;
@@ -147,7 +150,7 @@ header .navigation_link {
 .current-menu-item a{
     color: black!important;
 }
-.blog_tin_tuc , .category-page{
+.blog_tin_tuc , .main-content{
     border-bottom: 1px solid rgba(var(--b38,219,219,219),1);
 }
 .blog_tin_tuc .content-blog-box .item-product .thumb img{
@@ -271,10 +274,10 @@ padding-bottom: 5px;
 
 
 /* category */
-.category-page{
+.main-content{
     border-bottom: 1px solid rgba(var(--b38,219,219,219),1);
 }
-.category-page .content-category-page .item-product .thumb img{
+.main-content .item-product .thumb img{
     width: 100%;
     height: 274px;
     object-fit: cover;
